# bonsai-chess

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.cargo/: config.toml
contracts/: BonsaiChess.sol  BonsaiStarter.sol
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
frontend/assets/: chessground.css  examples.css
frontend/src/: main.ts  util.ts
frontend/src/contracts/: BonsaiChess.json
methods/guest/: Cargo.toml
relay/examples/: callback_request.rs
relay/src/: main.rs
risc0-alloy/: Cargo.toml
risc0-alloy/src/: lib.rs
script/: Deploy.s.sol
tests/: BonsaiStarter.t.sol
