[workspace]
members = ["methods", "relay"]

[workspace.dependencies]
risc0-build = { git = "https://github.com/risc0/risc0", rev = "8ac6b84ca40607f9817e6366a97767a8f4d306e4" }
# risc0-build = { path = "../../risc0/risc0/risc0/build" }
risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "8ac6b84ca40607f9817e6366a97767a8f4d306e4", default-features = false }
# risc0-zkvm = { path = "../../risc0/risc0/risc0/zkvm", default-features = false }
bonsai-sdk = { git = "https://github.com/risc0/risc0", rev = "8ac6b84ca40607f9817e6366a97767a8f4d306e4" }
# bonsai-sdk = { path = "../../risc0/risc0/bonsai/sdk" }
bonsai-ethereum-relay = { git = "https://github.com/risc0/risc0", rev = "8ac6b84ca40607f9817e6366a97767a8f4d306e4" }
# bonsai-ethereum-relay = { path = "../../risc0/risc0/bonsai/ethereum-relay" }
methods = { path = "./methods", package = "bonsai-starter-methods" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
