[workspace]
members = ["methods", "relay", "risc0-alloy"]
resolver = "2"

[workspace.dependencies]
risc0-build = { git = "https://github.com/austinabell/risc0", branch = "bonsai_poll_fix" }
# risc0-build = { path = "../../risc0/risc0/risc0/build" }
risc0-zkvm = { git = "https://github.com/austinabell/risc0", branch = "bonsai_poll_fix", default-features = false }
# risc0-zkvm = { path = "../../risc0/risc0/risc0/zkvm", default-features = false }
bonsai-sdk = { git = "https://github.com/austinabell/risc0", branch = "bonsai_poll_fix" }
# bonsai-sdk = { path = "../../risc0/risc0/bonsai/sdk" }
bonsai-ethereum-relay = { git = "https://github.com/austinabell/risc0", branch = "bonsai_poll_fix" }
# bonsai-ethereum-relay = { path = "../../risc0/risc0/bonsai/ethereum-relay" }
methods = { path = "./methods", package = "bonsai-starter-methods" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3

[patch.crates-io]
# risc0-zkvm = { path = "../../risc0/risc0/risc0/zkvm" }
risc0-zkvm = { git = "https://github.com/austinabell/risc0", branch = "bonsai_poll_fix" }
risc0-zkp = { git = "https://github.com/austinabell/risc0", branch = "bonsai_poll_fix" }
# risc0-zkp = { path = "../../risc0/risc0/risc0/zkp" }
