[package]
name = "risc0-alloy"
version = "0.1.0"
edition = "2021"

[dependencies]
derisc0 = { git = "https://github.com/austinabell/derisc0", rev = "5b95ce5445aa411661549c6f0fc81eba1a115e72" }
# TODO this is only needed to have diff commit because of https://github.com/risc0/risc0/issues/376
risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "da5bc39089c6dba8b03510837f1c7363ed3cc8b7", default-features = false, features = ["std"] }
risc0-zkp = { git = "https://github.com/risc0/risc0", rev = "da5bc39089c6dba8b03510837f1c7363ed3cc8b7", default-features = false }
alloy-sol-types = { version = "0.3.2", default-features = false }
