[package]
name = "bonsai-starter-methods-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chess"
path = "src/bin/chess.rs"

[dependencies]
alloy-sol-types = { version = "0.3.2", default-features = false }
chess-engine = { git = "https://github.com/adam-mcdaniel/chess-engine", rev = "522a5672b93068b7218ab6c137901d79d2901c69" }
derisc0 = { git = "https://github.com/austinabell/derisc0", rev = "5b95ce5445aa411661549c6f0fc81eba1a115e72" }
risc0-alloy = { path = "../../risc0-alloy" }
# Directly import radium to silence warning about unused patch. See https://github.com/risc0/risc0/issues/549
radium = "=0.7.1"
risc0-zkvm = { git = "https://github.com/risc0/risc0", rev = "8ac6b84ca40607f9817e6366a97767a8f4d306e4", default-features = false, features = ["std"] }

[patch.crates-io]
radium = { git = "https://github.com/bitvecto-rs/radium", rev = "723bed5abd75994ee4b7221b8b12c9f4e77ce408" }

[profile.release]
lto = true
opt-level = 3

[workspace]
